project/iptables.conf
# Generated by iptables-save v1.6.0 on Sat Dec  2 20:09:33 2023
*mangle
:PREROUTING ACCEPT [525:255228]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [525:255228]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [369:204060]
COMMIT
# Completed on Sat Dec  2 20:09:33 2023
# Generated by iptables-save v1.6.0 on Sat Dec  2 20:09:33 2023
*nat
:PREROUTING ACCEPT [69:4188]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [36:2208]
COMMIT
# Completed on Sat Dec  2 20:09:33 2023
# Generated by iptables-save v1.6.0 on Sat Dec  2 20:09:33 2023
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
-A FORWARD -j NFQUEUE --queue-num 1
COMMIT
# Completed on Sat Dec  2 20:09:33 2023
